# YearsOfShadow

./: .clang-format  .gitignore  CMakeLists.txt  CodingPracticesDoc.md  CodingPracticesDoc.odt  Credits.txt  Doc.md  Doc.odt  FPSCamera.h  MultiplayerDoc.md  MultiplayerDoc.odt  README.md  YearsOfShadow.project  YearsOfShadow.sln  YearsOfShadow.vcxproj  YearsOfShadow.vcxproj.filters  app.cpp  customDBG.cpp  customDBG.h  glewinfo.txt  launch_debug.bat  launch_editor.bat  launch_release.bat  visualinfo.txt
.github/workflows/: cmake.yml  codeql.yml  msvc.yml  msvc_cmake.yml  msvc_test.yml
Data/Meshes/: Cube.mtl
Data/ShadersGL/: BasicInstancedMesh.shader  BasicMesh.shader  DebugMesh.shader  Instanced.shader
EchoEngine/: .gitignore  Asset.h  CMakeLists.txt  DArray.h  DDECS.h  DynamicBuffer.h  EchoEngine.natvis  FixedPoint.cpp  FixedPoint.h  FlatBuffer.h  Name.cpp  Name.h  Pathfinding.h  PhysicsEngineAABB2D.h  PhysicsEngineAABB2D_MT.h  PhysicsEngineAABB3D_MT.h  PhysicsFrame.h  RingBuffer.h  Sources.cpp  Widget.h  profiler.cpp
EchoEngine/BitBool/: BitBool.h
EchoEngine/EchoEngine/: Asset.cpp  Crunch.cpp  Crunch.h  DArray.h  DDECS.h  EE_Types.h  EntityObject.h  EntityObjectLoader.h  Entt.h  FixedPoint.cpp  FixedPoint.h  FlatBuffer.h  Name.cpp  Name.h  PhysicsEngineAABB3D.h  PhysicsEngineAABB3D_BodyAABB.h  PhysicsEngineAABB3D_MT.h  PhysicsEngineAABB3D_SHT.h  PhysicsFrame.h  SS.h  Vec.h  Widget.cpp  Widget.h  profiler.h
EchoEngine/EchoEngine/HAL/: HAL.h  HAL_3D.h
EchoEngine/EchoEngine/HAL/ExampleImplimentations/GLFW/: CustomWindowsThreadPool.h  HAL_GLFW_GL.h  cute_sound.c
EchoEngine/EchoEngine/HAL/ExampleImplimentations/GLFW/GL_Utils/: CameraArchive.h  InstancedMesh.h  InstancedMesh2.h  Mesh.h  SceneCamera.h  Shapes.h  TexturedQuad.h  VertexArray.h  VertexBufferLayout.h
EchoEngine/EchoEngine/HAL/GUI/: GUI.c  GUI.h
EchoEngine/HAL/: HAL.cpp  HAL.h
EchoEngine/HAL/ExampleImplimentations/GLFW/: CustomWindowsThreadPool.h  HAL_GLFW_GL.h  cute_sound.h
EchoEngine/HAL/ExampleImplimentations/GLFW/GL_Utils/: InstancedMesh.h  InstancedMesh2.h  Mesh.h  Shader.h  Texture.h  VertexArray.h  VertexBufferLayout.h
EchoEngine/HAL/ExampleImplimentations/Magnum/: IO_API_Magnum.h
EchoEngine/HAL/ExampleImplimentations/SDL2/: IO_API_SDL2.h
EchoEngine/HAL/ExampleImplimentations/Unigine/: AppEditorLogic_impl.h  AppWorldLogic.h  CustomWindowsThreadPool.h  HAL_Unigine.h
EchoEngine/HAL/ExampleImplimentations/Windows/: IO_API_WIN32_ADV.h  cute_sound.h  mp3ToWav.h
EchoEngine/HAL/ExampleImplimentations/Windows/Texture/picoPNG/: picoPNG.cpp
EchoEngine/HAL/GUI/: GUI.c
HAL/: CMakeLists.txt  Reference.md
HAL/HAL/: HAL.h  HAL_3DSoft.h
HAL/HAL/ExampleImplimentations/GLFW/: CustomCPP11ThreadPool.h  CustomSockets.h  CustomWindowsThreadPool.h  HAL_GLFW_GL.cpp  HAL_GLFW_GL.h  cute_sound.h
HAL/HAL/ExampleImplimentations/GLFW/GL_Utils/: GL_Call.h  IndexBuffer.h  InstancedMesh.h  InstancedMesh2.h  Mesh.h  SceneCamera.h  Shader.h  Shapes.h  TextQuad.h  Texture.h  TexturedQuad.h  TexturedQuad2.h  VertexArray.h  VertexBuffer.h
HAL/HAL/ExampleImplimentations/GLFW/stb/: cute_sound.h  stb_sound_vorbis.c
Systems/: SystemController.h  SystemDisplay.h  SystemEnemy.h  SystemExplode.h  SystemExplosionTest.h  SystemPhysics.h  SystemUtilities.h  SystemVoxel.h  Systems.h  Systems_impl.h
Systems/SystemUtilities/: Codex.h  EnemyAI.h  Inventory.h  Serialize.h  SystemKillzone.h  Voxel.h
YearsOfShadow/: CMakeLists.txt
YearsOfShadow/YearsOfShadow/: FP_FPSCamera.h  QuickTests.h  app.cpp
YearsOfShadow/YearsOfShadow/Systems/: Components.h  INC_UTILS.h  SystemController.h  SystemDeath.h  SystemDisplay.h  SystemEnemy.h  SystemExplode.h  SystemNetwork.h  SystemPhysics.h  SystemUtilities.h  SystemVoxel.h  Systems.h
YearsOfShadow/YearsOfShadow/Systems/SystemUtilities/: Codex.h  NetworkingTools.h  PlantData.h  PlantData_impl.h  Serialize.h  SerializeARCH.h  ThreadPoolAdjuster.h  Voxel.h  VoxelChunk.h  VoxelFrame.h  VoxelLoader.h
YearsOfShadow/YearsOfShadow/UX/: CustomWidgets.h  mainManu.h
bin-game/: imgui.ini  unit_testing.exe.gta.testdurations
bin-game/logs/: last_log.txt
cmake/: FetchGLEW.cmake  FetchGLFW.cmake  FetchGLM.cmake  FetchImGUI.cmake  FetchMakeAvailable.cmake  FetchOBJ_Loader.cmake  FetchOptick.cmake
data/: YearsOfShadow.world  box.mesh  guids.db  plane.mesh  root_mount.umount  scripts.ung
data/ComponentSystem/: MeshSkinnedHandMapper.prop  UltraleapHandControllerVarjo.prop  player_openvr.prop
data/configs/: default.boot  default.config  default.controls  editor.boot
data/vr_template/: VR.node
include/: Unigine.h  UnigineApp.xml  UnigineAsyncQueue.h  UnigineAsyncQueue.xml  UnigineBase.h  UnigineBiMap.h  UnigineBiMap.xml  UnigineCIGIConnector.xml  UnigineCallback.h  UnigineCamera.h  UnigineCamera.xml  UnigineChecksum.h  UnigineChecksum.xml  UnigineComponentSystem.h  UnigineComponentSystem.xml  UnigineCompress.h  UnigineCompress.xml  UnigineConfig.h  UnigineConfig.xml  UnigineConsole.h  UnigineConsole.xml  UnigineControls.h  UnigineControls.xml  UnigineCurve2d.h  UnigineCurve2d.xml  UnigineCustomSystemProxy.h  UnigineCustomSystemProxy.xml  UnigineDISConnector.xml  UnigineDecals.h  UnigineDecals.xml  UnigineDir.h  UnigineDir.xml  UnigineDisplays.h  UnigineDisplays.xml  UnigineEditor.h  UnigineEditor.xml  UnigineEllipsoid.h  UnigineEllipsoid.xml  UnigineEngine.h  UnigineEngine.xml  (+221 more)
include/editor/: UnigineActions.h  UnigineAssetDialogs.h  UnigineAssetImportParameters.h  UnigineAssetManager.h  UnigineCollection.h  UnigineConstants.h  UnigineEditorGlobal.h  UnigineEngineGuiWindow.h  UniginePlugin.h  UniginePluginInfo.h  UniginePluginManager.h  UnigineRenderWindow.h  UnigineSelection.h  UnigineSelector.h  UnigineSettingManager.h  UnigineUndo.h  UnigineViewportManager.h  (+1 more)
lib/: EditorCore_double_x64.lib  EditorCore_double_x64d.lib
source/: AppEditorLogic.h  AppSystemLogic.cpp  AppSystemLogic.h  AppWorldLogic.cpp  FPSCamera.h  FP_FPSCamera.h  Voxel.h  YearsOfShadow.sln  YearsOfShadow.vcxproj  app.cpp  main.cpp
test/: CMakeLists.txt
test/EchoEngine/: fixed_point_test.cc  main.cc
(+225 files in other folders)
